RESOLVED FIXED196590
[JSC] Pass CodeOrigin to FuzzerAgent
https://bugs.webkit.org/show_bug.cgi?id=196590
Summary [JSC] Pass CodeOrigin to FuzzerAgent
Yusuke Suzuki
Reported 2019-04-03 22:51:23 PDT
[JSC] Pass CodeOrigin to FuzzerAgent
Attachments
Patch (7.05 KB, patch)
2019-04-03 22:54 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2019-04-03 22:54:18 PDT
EWS Watchlist
Comment 2 2019-04-03 22:56:44 PDT
Attachment 366701 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ChangeLog:3: Please consider whether the use of security-sensitive phrasing could help someone exploit WebKit: fuzzer, fuzzer, fuzzer, fuzzer, fuzzer, fuzzer, fuzzer, fuzzer [changelog/unwantedsecurityterms] [3] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 3 2019-04-04 11:25:48 PDT
Comment on attachment 366701 [details] Patch Thanks!
WebKit Commit Bot
Comment 4 2019-04-04 11:53:13 PDT
Comment on attachment 366701 [details] Patch Clearing flags on attachment: 366701 Committed r243885: <https://trac.webkit.org/changeset/243885>
WebKit Commit Bot
Comment 5 2019-04-04 11:53:15 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-04-04 11:59:18 PDT
Note You need to log in before you can comment on or make changes to this bug.